@@ -1,3 +1,13 @@
+1998-07-01  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* glclock.cc (create_context): Use module::init.
+
+	* module.h (class module): Update def.
+	* module.cc (init): New function.
+
+	* ChangeLog: Fix doc.
+	* NEWS: Fix doc.
+
 1998-06-30  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* module.cc (draw_clock): Use GL_AMBIENT_AND_DIFFUSE.
@@ -6,7 +16,7 @@
 	* Version 0.10 released.
 
 	* module.cc (draw_clock): Clear also the depth buffer.
-	(draw_clock): Draw a disk behind the hands.
+	(draw_clock): Draw a round dial behind the hands.
 	(draw_clock): Set the material parameters.
 
 	* glclock.cc (create_context): Enable GL_DEPTH_TEST.
